cleanup (separate abstract from concrete); more

--- a/aoc2019.cabal
+++ b/aoc2019.cabal
@@ -15,12 +15,14 @@ library
       Aoc2019.Intcode.Instruction.Int
       Aoc2019.Intcode.Interpreter
       Aoc2019.Intcode.Interpreter.Default
-      Aoc2019.Intcode.Interpreter.DefaultStep
       Aoc2019.Intcode.Interpreter.Symbolic
+      Aoc2019.Intcode.Machine
       Aoc2019.Intcode.Programs
       Aoc2019.Intcode.Programs.D2
       Aoc2019.Intcode.Tape
+      Aoc2019.Intcode.Tape.IntMap
       Aoc2019.Intcode.Tmp.ExecTests
+      Aoc2019.Intcode.Tmp.ExecTestsOld
       Aoc2019.LinSys
       Aoc2019.Parsers
       Aoc2019.Utils
