um I did it. working symbolic interpreter
Turns out D2 is less evil than I thought: the position stuff gets
cancelled out somewhere guaranteed somehow, because my analysis always
returns a plain equation, which definitely works (so the values that are
initially read from noun and verb must be thrown away!).

--- a/aoc2019.cabal
+++ b/aoc2019.cabal
@@ -76,6 +76,7 @@ test-suite spec
   main-is: Spec.hs
   other-modules:
       Aoc2019.Intcode.Instruction.IntSpec
+      Aoc2019.Intcode.Interpreter.Symbolic.MvarPolySpec
       Paths_aoc2019
   hs-source-dirs:
       test
