solve day 5 (even tho I didn't do PC bit)

--- a/aoc2019.cabal
+++ b/aoc2019.cabal
@@ -22,6 +22,7 @@ library
       Tapecode.Intcode.Interpreter.SymTest
       Tapecode.Intcode.Programs
       Tapecode.Intcode.Programs.D2Symbolic
+      Tapecode.Intcode.Programs.D5
       Tapecode.Intcode.Programs.Symbolic
       Tapecode.Intcode.Tmp.ExecTests
       Tapecode.Intcode.Tmp.ExecTestsOld
